--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -134,4 +136,49 @@ h2 {
   margin-top: 22px;
   padding-top: 16px;
   border-top: 1px solid lightgray;
+}
+
+
+.dark-mode {
+  background: #1e1e1e;
+  color: #f1f1f1;
+}
+
+.dark-mode .todo-app-container {
+  background: #121212;
+}
+
+.dark-mode .todo-app {
+  background: #2c2c2c;
+  color: #f1f1f1;
+  box-shadow: 0 4px 6px -1px rgba(255, 255, 255, 0.1),
+    0 2px 4px -1px rgba(255, 255, 255, 0.06);
+}
+
+.dark-mode .todo-input,
+.dark-mode .todo-item-input {
+  background: #3a3a3a;
+  color: #f1f1f1;
+  border: none;
+}
+
+.dark-mode .button,
+.dark-mode .x-button {
+  background: #3a3a3a;
+  color: #f1f1f1;
+  border: 1px solid #555;
+}
+
+.demo-title {
+  font-size: 28px;
+  font-weight: bold;
+  color: #374151;   /* dark gray */
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+/* Dark Mode override */
+.dark-mode .demo-title {
+  color: #f1f1f1;
 }
